--- a/style/style.css
+++ b/style/style.css
@@ -729,7 +729,7 @@ section:nth-of-type(3) #gallery .mix:nth-child(4) .card {
   background: url("../img/thumb-4.jpg") center center/cover;
 }
 section:nth-of-type(3) #gallery .mix:nth-child(5) .card {
-  background: url("../img/thumb-5.jpg") center center/cover;
+  background: url("../img/thumb-5.jpeg") center center/cover;
 }
 section:nth-of-type(3) #gallery .mix:nth-child(6) .card {
   background: url("../img/thumb-6.jpg") center center/cover;
